Users/ideal/Desktop/22i0637_A_SQE_Project/bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: 22i0637-a-sqe-project
    labels:
        com.docker.compose.project: 22i0637_a_sqe_project
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: 22i0637_a_sqe_project
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: 22i0637_a_sqe_project
                com.docker.compose.service: frontend
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: frontend
                  image: 22i0637_a_sqe_project-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-5173
                      containerPort: 5173
