Users/ideal/Desktop/22i0637_A_SQE_Project/bridge/base/frontend-expose.yaml
#! frontend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: 22i0637-a-sqe-project
    labels:
        com.docker.compose.project: 22i0637_a_sqe_project
        com.docker.compose.service: frontend
spec:
    selector:
        com.docker.compose.project: 22i0637_a_sqe_project
        com.docker.compose.service: frontend
    ports:
        - name: frontend-5173
          port: 5173
          targetPort: frontend-5173
